tests/baselines/reference/extendArray.errors.txt
tests/cases/compiler/extendArray.ts(7,19): error TS2304: Cannot find name '_element'.
tests/cases/compiler/extendArray.ts(7,32): error TS2304: Cannot find name '_element'.


==== tests/cases/compiler/extendArray.ts (2 errors) ====
    var a = [1,2];
    a.forEach(function (v,i,a) {});
    
    
    declare module _Core {
      interface Array {
        collect(fn:(e:_element) => _element[]) : any[];
                      ~~~~~~~~
!!! error TS2304: Cannot find name '_element'.
                                   ~~~~~~~~
!!! error TS2304: Cannot find name '_element'.
      }
    }
    
    
    var arr = (<any>Array).prototype;
    arr.collect = function (fn) {
        var res = [];
        for (var i = 0; i < this.length; ++i) {
            var tmp = fn(this[i]);
            for (var j = 0; j < tmp.length; ++j) {
                res.push(tmp[j]);
            }
        }
        return res;
    };
    